if progress dialog is last open window, it closing at download completion should _not_ cancel download.  Bug 181374, patch by Sascha Kettler <kettler@gmx.net>, r=timeless, sr=bzbarsky